random transparent lines with fractional scaling
Affected version
- gnome 3.36
- gnome 3.38
- lastest master
Archlinux + gnome + wayland + 125% scaling.
Bug summary
There are some transparent lines (I believe these line just pick colors from background) appear randomly.
I have a 4K display with 200% scaling and it is not affected by this issue.
Steps to reproduce
- enable fractional scaling with factor of 125%
- open nautilus and create a text file
- right click the file and open the menu, then click the "Open With Other Application"
- move around the cursor above the recommended applications
What happened
Some transparent lines appear.
What did you expect to happen
These lines do not appear.