src/compositor/meta-shaped-texture.c
@@ -1002,7 +1002,7 @@ meta_shaped_texture_update_area (MetaShapedTexture     *stex,
 
   meta_rectangle_scale_double (clip,
                                1.0 / stex->buffer_scale,
-                               META_ROUNDING_STRATEGY_SHRINK,
+                               META_ROUNDING_STRATEGY_GROW,
                                clip);
 
   inverted_transform = meta_monitor_transform_invert (stex->transform);
